--- a/app/src/main/res/layout/activity_recherche_table_step1.xml
+++ b/app/src/main/res/layout/activity_recherche_table_step1.xml
@@ -56,7 +56,7 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/mediumSize"
                     android:text="Date :"
-                    android:onClick="dateFilter"/>
+                    android:onClick="onClickDataFilter"/>
 
                 <EditText
                     android:id="@+id/editTextDate"
@@ -70,7 +70,6 @@
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
                     android:textSize="@dimen/mediumSize"
-                    android:inputType="date"
                     android:text="jj-mm-aaaa"
                     android:visibility="invisible"/>
             </LinearLayout>
