--- a/app/src/main/res/color/checkbox_color.xml
+++ b/app/src/main/res/color/checkbox_color.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:state_enabled="true"
+        android:state_selected="true"
         android:color="@color/green">
     </item>
     <item
-        android:state_enabled="false"
         android:color="@color/red" ></item>
-    <item
-        android:color="@color/white"></item>
 </selector>
