--- a/app/src/main/res/layout/activity_creer_ma_table_step3.xml
+++ b/app/src/main/res/layout/activity_creer_ma_table_step3.xml
@@ -10,9 +10,11 @@
     android:background="@drawable/background"
     >
     <LinearLayout
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
         <fragment
             android:id="@+id/fragment"
             android:name="com.example.latabledesgourmands.fragments.bandeauHaut"
@@ -36,7 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/topLayout"
+        android:layout_marginVertical="5dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,66 +50,29 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="@color/white"
-                    android:fontFamily="@font/indie_flower"
-                    android:gravity="center_horizontal"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/bigSize"
-                    android:text="Date :"
-                    ></TextView>
-
-                <EditText
-                    android:id="@+id/editTextDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <DatePicker
+                        android:id="@+id/datePicker"
+                        android:layout_width="wrap_content"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
-                    android:ems="10"
-                    android:layout_margin="5dp"
-                    android:background="@color/white"
-                    android:fontFamily="@font/indie_flower"
-                    android:gravity="center_horizontal"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/bigSize"
-                    android:inputType="date"
-                    android:text="jj-mm-aaaa"/>
-            </LinearLayout>
+                        android:background="@color/white"
+                        android:calendarViewShown="false"
+                        android:datePickerMode="spinner"
+                        android:startYear="2020" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
+                <TimePicker
+                    android:id="@+id/timePicker"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="@color/white"
-                    android:fontFamily="@font/indie_flower"
-                    android:gravity="center_horizontal"
-                    android:text="Heure :"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/bigSize"></TextView>
-
-                <EditText
-                    android:id="@+id/editTextTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="150dp"
                     android:layout_weight="1"
-                    android:ems="10"
-                    android:layout_margin="5dp"
+                    android:layout_gravity="center_horizontal"
                     android:background="@color/white"
-                    android:fontFamily="@font/indie_flower"
-                    android:gravity="center_horizontal"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/bigSize"
-                    android:inputType="time"
-                    android:text="hh : mm"/>
+                    android:timePickerMode="spinner"
+                    />
             </LinearLayout>
 
             <LinearLayout
@@ -139,7 +105,7 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/bigSize"
                     android:inputType="textPostalAddress"
-                    android:text="41 rue jeanMich, Ville "/>
+                    />
             </LinearLayout>
 
             <LinearLayout
@@ -170,6 +136,7 @@
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
                     android:textSize="@dimen/bigSize"
+                    android:text="5"
                     android:inputType="number" />
             </LinearLayout>
 
@@ -201,7 +168,9 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/bigSize"
                     android:inputType="text"
-                    android:text="Nom Du Theme"/>
+                    android:text="thème"
+
+                    />
             </LinearLayout>
 
             <LinearLayout
@@ -221,14 +190,6 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/bigSize"
                     android:text="Fumeur" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
                 <CheckBox
                     android:id="@+id/checkBox2"
                     android:layout_width="wrap_content"
@@ -241,13 +202,6 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/bigSize"
                     android:text="Animaux" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
                 <CheckBox
                     android:id="@+id/checkBox3"
                     android:layout_width="wrap_content"
@@ -261,27 +215,33 @@
                     android:textSize="@dimen/bigSize"
                     android:text="Alcool" />
             </LinearLayout>
-
-
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true">
 
         <Button
-            android:id="@+id/nextStepButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:fontFamily="@font/indie_flower"
-            android:textColor="@color/black"
-            android:textSize="@dimen/mediumSize"
-            android:layout_margin="5dp"
-            android:text="@string/nextStep"
-            android:onClick="onClickNextStepButton"
-            ></Button>
+        android:id="@+id/nextStepButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@color/white"
+        android:fontFamily="@font/indie_flower"
+        android:onClick="onClickNextStepButton"
+        android:text="@string/nextStep"
+        android:textColor="@color/black"
+        android:textSize="@dimen/mediumSize"></Button>
+
         <fragment
-            android:id="@+id/fragmentBas"
-            android:name="com.example.latabledesgourmands.fragments.bandeauBasCreationTDG"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_bandeau_haut" />
+        android:id="@+id/fragmentBas"
+        android:name="com.example.latabledesgourmands.fragments.bandeauBasCreationTDG"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_bandeau_bas_creation_t_d_g" />
     </LinearLayout>
+
 </RelativeLayout>
