--- a/app/src/main/res/layout/activity_creer_ma_table_step4.xml
+++ b/app/src/main/res/layout/activity_creer_ma_table_step4.xml
@@ -48,7 +48,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
@@ -59,6 +59,7 @@
                         android:fontFamily="@font/indie_flower"
                         android:gravity="center_horizontal"
                         android:text="Cuisinier :"
+                    android:layout_weight="1"
                         android:textColor="@color/black"
                         android:textSize="@dimen/bigSize"></TextView>
 
@@ -68,11 +69,13 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/white"
+                    android:layout_weight="1"
                     android:fontFamily="@font/indie_flower"
                     android:gravity="center_horizontal"
                     android:text="cook number"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/bigSize"></TextView>
+                    android:textSize="@dimen/bigSize"
+                    ></TextView>
             </LinearLayout>
 
             <TextView
@@ -93,14 +96,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:layout="@layout/fragment_menu" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/adressePrint"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/white"
@@ -111,6 +110,10 @@
                     android:textSize="@dimen/bigSize"
                     android:layout_weight="1"
                     ></TextView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/datePrint"
@@ -148,14 +151,6 @@
 
             </LinearLayout>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-            </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -167,24 +162,18 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:background="@color/white"
+                    android:layout_weight="1"
                     android:fontFamily="@font/indie_flower"
                     android:gravity="center_horizontal"
                     android:text="Nombre de convives"
                     android:textColor="@color/black"
                     android:textSize="@dimen/bigSize"></TextView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/nomThemePrint"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:background="@color/white"
                     android:fontFamily="@font/indie_flower"
                     android:gravity="center_horizontal"
@@ -192,7 +181,6 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/bigSize"></TextView>
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -262,6 +250,6 @@
             android:name="com.example.latabledesgourmands.fragments.bandeauBasCreationTDG"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_bandeau_haut" />
+            tools:layout="@layout/fragment_bandeau_bas_creation_t_d_g" />
     </LinearLayout>
 </RelativeLayout>
