--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="@dimen/mediumSize"
+    android:background="@color/yellow"
     >
 
     <LinearLayout
@@ -27,6 +28,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/lightYellow"
             style="@style/Widget.AppCompat.RatingBar.Indicator"
             android:isIndicator="true"
             android:layout_gravity="center_horizontal"
@@ -57,6 +59,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/lightYellow"
             style="@style/Widget.AppCompat.RatingBar.Indicator"
             android:isIndicator="true"
             android:layout_gravity="center_horizontal"
@@ -86,6 +89,7 @@
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/lightYellow"
         style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:isIndicator="true"
         android:layout_gravity="center_horizontal"
@@ -94,18 +98,38 @@
         android:rating="3"
         />
     </LinearLayout>
-    <TextView
-        android:id="@+id/prixMenuFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:fontFamily="@font/indie_flower"
-        android:gravity="center_horizontal"
-        android:text="Price"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize">
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/prixMenuFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="Price"
+            android:textColor="@color/black"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:textSize="@dimen/bigSize">
+        </TextView>
+        <Button
+            android:id="@+id/wineIndicatorFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/checkbox_color"
+            android:textColor="@color/black"
+            android:fontFamily="@font/indie_flower"
+            android:gravity="center_horizontal"
+            android:text="avec Vin"
+            android:textSize="@dimen/mediumSize"
+            android:layout_weight="1"
+            ></Button>
 
-    </TextView>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -113,8 +137,8 @@
 
         <Button
             android:id="@+id/VegetarienMenuIndicatorFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:textColor="@color/black"
             android:fontFamily="@font/indie_flower"
@@ -127,8 +151,8 @@
 
         <Button
             android:id="@+id/VeganMenuIndicatorFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:textColor="@color/black"
             android:fontFamily="@font/indie_flower"
@@ -141,16 +165,17 @@
 
         <Button
             android:id="@+id/GlutenMenuIndicatorFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:backgroundTint="@color/checkbox_color"
             android:textColor="@color/black"
             android:fontFamily="@font/indie_flower"
             android:gravity="center_horizontal"
-            android:text="Gluten"
+            android:text="Sans gluten"
             android:textSize="@dimen/mediumSize"
             android:layout_weight="1"
             ></Button>
     </LinearLayout>
+
 </LinearLayout>
