--- a/app/src/main/res/layout/activity_creer_mon_menu_final_step.xml
+++ b/app/src/main/res/layout/activity_creer_mon_menu_final_step.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <fragment
-            android:id="@+id/fragment"
+            android:id="@+id/creerMonMenuFinalStepMenuFragment"
             android:name="com.example.latabledesgourmands.fragments.bandeauHaut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
